# MultimediaSignalProcessingClass

./: .gitignore  README.md
Arithmetic-Coding/: Cargo.toml  lorem-ipsum.txt
Arithmetic-Coding/src/: main.rs
Block-Truncation-Coding/: Cargo.toml
Block-Truncation-Coding/src/: main.rs
Error-Diffused Block-Truncation-Coding/: Cargo.toml
Error-Diffused Block-Truncation-Coding/src/: main.rs
Error-Diffusion/: Cargo.toml
Error-Diffusion/src/: main.rs
Order-Dithered Block-Truncation-Coding/: Cargo.toml
Order-Dithered Block-Truncation-Coding/src/: arrays.rs  main.rs
Ordered-Dithering/: Cargo.toml  output.txt
Ordered-Dithering/src/: main.rs
img-quality/: Cargo.toml
img-quality/src/: lib.rs
