[package]
name = "Ordered-Dithering"
version = "0.1.0"
authors = ["kmgx <kmgx@declaverie.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.3"
structopt = "0.3.2"
rayon = "1.2.0"
num-traits = "0.2.8"
